--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(namfinder VERSION 0.1)
+project(namfinder VERSION 0.1.1)
 include(FetchContent)
 
-configure_file(
-    "${PROJECT_SOURCE_DIR}/src/version.hpp.in"
-    "${PROJECT_BINARY_DIR}/version.hpp"
-)
+
 option(ENABLE_AVX "Enable AVX2 support" OFF)
 
 find_package(ZLIB)
@@ -28,11 +25,20 @@ endif()
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 add_compile_options(-Wall -Wextra -Werror=maybe-uninitialized)
 
-FetchContent_Declare(cmake_git_version_tracking
-  GIT_REPOSITORY https://github.com/andrew-hardin/cmake-git-version-tracking.git
-  GIT_TAG 904dbda1336ba4b9a1415a68d5f203f576b696bb
+# Obtain version from Git or fall back to PROJECT_VERSION if not building
+# from a Git repository
+add_custom_target(version
+        ${CMAKE_COMMAND}
+        -D CONFIGIN="${PROJECT_SOURCE_DIR}/src/version.hpp.in"
+        -D CONFIGOUT="${PROJECT_BINARY_DIR}/version.hpp"
+        -D DEFAULT_VERSION="${PROJECT_VERSION}"
+        -P ${CMAKE_SOURCE_DIR}/GitVersion.cmake
+        )
+
+configure_file(
+        "${PROJECT_SOURCE_DIR}/src/buildconfig.hpp.in"
+        "${PROJECT_BINARY_DIR}/buildconfig.hpp"
 )
-FetchContent_MakeAvailable(cmake_git_version_tracking)
 
 add_library(salib STATIC ${SOURCES}
   src/refs.cpp
@@ -56,9 +62,10 @@ target_link_libraries(salib PUBLIC ZLIB::ZLIB Threads::Threads)
 IF(ENABLE_AVX)
   target_compile_options(salib PUBLIC "-mavx2")
 ENDIF()
+add_dependencies(salib version)
 
 add_executable(namfinder src/main.cpp)
-target_link_libraries(namfinder PUBLIC salib cmake_git_version_tracking)
+target_link_libraries(namfinder PUBLIC salib)
 install(TARGETS namfinder DESTINATION bin)
 
 
